--- a/pages/17211.html
+++ b/pages/17211.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6960/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6960/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -815,7 +815,7 @@ margin-left: 0em;
   \mathbb{S} \longrightarrow H \mathbb{Z}
 
 </annotation></semantics></math></div>
-<p>from the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a> to the <a class="existingWikiWord" href="/nlab/show/Eilenberg-MacLane+spectrum">Eilenberg-MacLane spectrum</a> of the <a class="existingWikiWord" href="/nlab/show/integers">integers</a>. For any <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a>/<a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a> postcomposition with this morphism induces morphisms of <a class="existingWikiWord" href="/nlab/show/cohomology+groups">cohomology groups</a> (in fact of <a class="existingWikiWord" href="/nlab/show/commutative+rings">commutative rings</a>)</p>
+<p>from the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a> to the <a class="existingWikiWord" href="/nlab/show/Eilenberg-MacLane+spectrum">Eilenberg-MacLane spectrum</a> of the <a class="existingWikiWord" href="/nlab/show/integers">integers</a>. For any <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a>/<a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a> postcomposition with this morphism induces <a class="existingWikiWord" href="/nlab/show/Boardman+homomorphisms">Boardman homomorphisms</a> of <a class="existingWikiWord" href="/nlab/show/cohomology+groups">cohomology groups</a> (in fact of <a class="existingWikiWord" href="/nlab/show/commutative+rings">commutative rings</a>)</p>
 <div class="maruku-equation" id="eq:BoardmandCohomotopyToOrdinaryCohomology"><span class="maruku-eq-number">(1)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>b</mi> <mi>n</mi></msup><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><msup><mi>π</mi> <mi>n</mi></msup><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>⟶</mo><msup><mi>H</mi> <mi>n</mi></msup><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
   
   b^n
@@ -827,8 +827,10 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>from the <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> in degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> to its <a class="existingWikiWord" href="/nlab/show/ordinary+cohomology">ordinary cohomology</a> in degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>.</p>
 
-<div class="num_prop">
+<div class="num_prop" id="BoundsOnCoKernelOfBoardmandFromStableCohomotopyToOrdinaryCohomology">
 <h6 id="proposition">Proposition</h6>
+
+<p><strong>(bounds on (<a class="existingWikiWord" href="/nlab/show/cokernel">co-</a>)<a class="existingWikiWord" href="/nlab/show/kernel">kernel</a> of <a class="existingWikiWord" href="/nlab/show/Boardman+homomorphism">Boardman homomorphism</a> from <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a> to <a class="existingWikiWord" href="/nlab/show/integral+cohomology">integral cohomology</a>)</strong></p>
 
 <p>If <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/CW-spectrum">CW-spectrum</a> which</p>
 
@@ -846,22 +848,52 @@ margin-left: 0em;
 
 <ol>
 <li>
-<p>the <a class="existingWikiWord" href="/nlab/show/kernel">kernel</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>b</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">b^n</annotation></semantics></math> <a class="maruku-eqref" href="#eq:BoardmandCohomotopyToOrdinaryCohomology">(1)</a> for</p>
+<p>the <a class="existingWikiWord" href="/nlab/show/kernel">kernel</a> of the <a class="existingWikiWord" href="/nlab/show/Boardman+homomorphism">Boardman homomorphism</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>b</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">b^n</annotation></semantics></math> <a class="maruku-eqref" href="#eq:BoardmandCohomotopyToOrdinaryCohomology">(1)</a> for</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>m</mi><mo>≤</mo><mi>n</mi><mo>≤</mo><mi>d</mi><mo>−</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">
   m \leq n\leq d -1
 
 </annotation></semantics></math></div>
-<p>is an <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">\overline{\rho}_{d-n}</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/torsion+subgroup">torsion group</a>:</p>
+<p>is a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">\overline{\rho}_{d-n}</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/torsion+subgroup">torsion group</a>:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi></mrow></msub><mi>ker</mi><mo stretchy="false">(</mo><msup><mi>b</mi> <mi>n</mi></msup><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mn>0</mn></mrow><annotation encoding="application/x-tex">
   \overline{\rho}_{d-n} ker(b^n) \;\simeq\; 0
 
 </annotation></semantics></math></div></li>
 
 <li>
-<p>the <a class="existingWikiWord" href="/nlab/show/cokernel">cokernel</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>b</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">b^n</annotation></semantics></math> <a class="maruku-eqref" href="#eq:BoardmandCohomotopyToOrdinaryCohomology">(1)</a> for …</p>
-</li>
+<p>the <a class="existingWikiWord" href="/nlab/show/cokernel">cokernel</a> of the <a class="existingWikiWord" href="/nlab/show/Boardman+homomorphism">Boardman homomorphism</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>b</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">b^n</annotation></semantics></math> <a class="maruku-eqref" href="#eq:BoardmandCohomotopyToOrdinaryCohomology">(1)</a> for</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>m</mi><mo>≤</mo><mi>n</mi><mo>≤</mo><mi>d</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">
+  m \leq n  \leq d - 2
+
+</annotation></semantics></math></div>
+<p>is a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">\overline{\rho}_{d-n-1}</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/torsion+subgroup">torsion group</a>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mi>coker</mi><mo stretchy="false">(</mo><msup><mi>b</mi> <mi>n</mi></msup><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mn>0</mn></mrow><annotation encoding="application/x-tex">
+  \overline{\rho}_{d-n-1} coker(b^n) \;\simeq\; 0
+
+</annotation></semantics></math></div></li>
 </ol>
+
+<p>where</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mi>i</mi></msub><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mn>1</mn></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>i</mi><mo>≤</mo><mn>1</mn></mtd></mtr> <mtr><mtd><munderover><mo lspace="thinmathspace" rspace="thinmathspace">∏</mo><mrow><mi>j</mi><mo>=</mo><mn>1</mn></mrow><mi>i</mi></munderover><mi>exp</mi><mrow><mo>(</mo><msub><mi>π</mi> <mi>j</mi></msub><mrow><mo>(</mo><mi>𝕊</mi><mo>)</mo></mrow><mo>)</mo></mrow></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mtext>otherwise</mtext></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding="application/x-tex">
+  \overline{\rho}_{i}
+   \;\coloneqq\;
+   \left\{
+   \array{
+     1 &amp;\vert&amp; i\leq 1
+     \\
+     \underoverset{j = 1}{i}{\prod}  
+       exp\left( 
+         \pi_j\left( \mathbb{S}\right)
+       \right)
+     &amp;\vert&amp;
+     \text{otherwise}
+   }
+   \right.
+
+</annotation></semantics></math></div>
+<p>is the <a class="existingWikiWord" href="/nlab/show/multiplication">product</a> of the <a class="existingWikiWord" href="/nlab/show/exponent+of+a+group">exponents</a> of the <a class="existingWikiWord" href="/nlab/show/stable+homotopy+groups+of+spheres">stable homotopy groups of spheres</a> in <a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>≤</mo><mi>i</mi></mrow><annotation encoding="application/x-tex">\leq i</annotation></semantics></math>.</p>
 </div>
+
+<p>(<a href="#Arlettaz04">Arlettaz 04, theorem 1.2</a>)</p>
 
 <h3 id="ForComplexOrientedCohomologyTheories">For complex oriented cohomology theories</h3>
 
@@ -882,7 +914,7 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Stanley+Kochmann">Stanley Kochmann</a>, section 4.3 of <em><a class="existingWikiWord" href="/nlab/show/Bordism%2C+Stable+Homotopy+and+Adams+Spectral+Sequences">Bordism, Stable Homotopy and Adams Spectral Sequences</a></em>, AMS 1996</p>
 </li>
 
-<li>
+<li id="Arlettaz04">
 <p>Dominique Arlettaz, <em>The generalized Boardman homomorphisms</em>, Central European Journal of Mathematics March 2004, Volume 2, Issue 1, pp 50-56</p>
 </li>
 
@@ -900,7 +932,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 23, 2018 at 08:58:46.
+  Last revised on October 23, 2018 at 09:16:46.
   See the <a href="https://ncatlab.org/nlab/history/Boardman homomorphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
