--- a/pages/17004.html
+++ b/pages/17004.html
@@ -891,6 +891,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#AsAlgebraicKTheoryOverTheFieldWithOneElement'>As algebraic K-theory over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></a></li>
 <li><a href='#kahnpriddy_theorem'>Kahn-Priddy theorem</a></li>
+<li><a href='#boardman_homomorphisms'>Boardman homomorphisms</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
@@ -957,6 +958,93 @@ margin-left: 0em;
 <h3 id="kahnpriddy_theorem">Kahn-Priddy theorem</h3>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/Kahn-Priddy+theorem">Kahn-Priddy theorem</a> characterizes a comparison map between stable cohomotopy and <a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a> with <a class="existingWikiWord" href="/nlab/show/coefficients">coefficients</a> in the infinite <a class="existingWikiWord" href="/nlab/show/real+projective+space">real projective space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℝ</mi><msup><mi>P</mi> <mn>∞</mn></msup><mo>≃</mo><mi>B</mi><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathbb{R}P^\infty \simeq B \mathbb{Z}/2</annotation></semantics></math>.</p>
+
+<h3 id="boardman_homomorphisms">Boardman homomorphisms</h3>
+
+<p>Consider the <a class="existingWikiWord" href="/nlab/show/unit">unit</a> morphism</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>𝕊</mi><mo>⟶</mo><mi>H</mi><mi>ℤ</mi></mrow><annotation encoding="application/x-tex">
+  \mathbb{S} \longrightarrow H \mathbb{Z}
+
+</annotation></semantics></math></div>
+<p>from the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a> to the <a class="existingWikiWord" href="/nlab/show/Eilenberg-MacLane+spectrum">Eilenberg-MacLane spectrum</a> of the <a class="existingWikiWord" href="/nlab/show/integers">integers</a>. For any <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a>/<a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a> postcomposition with this morphism induces <a class="existingWikiWord" href="/nlab/show/Boardman+homomorphisms">Boardman homomorphisms</a> of <a class="existingWikiWord" href="/nlab/show/cohomology+groups">cohomology groups</a> (in fact of <a class="existingWikiWord" href="/nlab/show/commutative+rings">commutative rings</a>)</p>
+<div class="maruku-equation" id="eq:BoardmandCohomotopyToOrdinaryCohomology"><span class="maruku-eq-number">(1)</span><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mi>b</mi> <mi>n</mi></msup><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><msup><mi>π</mi> <mi>n</mi></msup><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo>⟶</mo><msup><mi>H</mi> <mi>n</mi></msup><mo stretchy="false">(</mo><mi>X</mi><mo>,</mo><mi>ℤ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  
+  b^n
+  \;\colon\;
+  \pi^n(X)
+  \longrightarrow
+  H^n(X, \mathbb{Z})
+
+</annotation></semantics></math></div>
+<p>from the <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> in degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> to its <a class="existingWikiWord" href="/nlab/show/ordinary+cohomology">ordinary cohomology</a> in degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>.</p>
+
+<div class="num_prop" id="BoundsOnCoKernelOfBoardmandFromStableCohomotopyToOrdinaryCohomology">
+<h6 id="proposition_2">Proposition</h6>
+
+<p><strong>(bounds on (<a class="existingWikiWord" href="/nlab/show/cokernel">co-</a>)<a class="existingWikiWord" href="/nlab/show/kernel">kernel</a> of <a class="existingWikiWord" href="/nlab/show/Boardman+homomorphism">Boardman homomorphism</a> from <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a> to <a class="existingWikiWord" href="/nlab/show/integral+cohomology">integral cohomology</a>)</strong></p>
+
+<p>If <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/CW-spectrum">CW-spectrum</a> which</p>
+
+<ol>
+<li>
+<p>is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>m</mi><mo>−</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(m-1)</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/n-connected+object+of+an+%28infinity%2C1%29-topos">(m-1)-connected</a></p>
+</li>
+
+<li>
+<p>of dimension <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>d</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">d \in \mathbb{N}</annotation></semantics></math></p>
+</li>
+</ol>
+
+<p>then</p>
+
+<ol>
+<li>
+<p>the <a class="existingWikiWord" href="/nlab/show/kernel">kernel</a> of the <a class="existingWikiWord" href="/nlab/show/Boardman+homomorphism">Boardman homomorphism</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>b</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">b^n</annotation></semantics></math> <a class="maruku-eqref" href="#eq:BoardmandCohomotopyToOrdinaryCohomology">(1)</a> for</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>m</mi><mo>≤</mo><mi>n</mi><mo>≤</mo><mi>d</mi><mo>−</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">
+  m \leq n\leq d -1
+
+</annotation></semantics></math></div>
+<p>is a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">\overline{\rho}_{d-n}</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/torsion+subgroup">torsion group</a>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi></mrow></msub><mi>ker</mi><mo stretchy="false">(</mo><msup><mi>b</mi> <mi>n</mi></msup><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mn>0</mn></mrow><annotation encoding="application/x-tex">
+  \overline{\rho}_{d-n} ker(b^n) \;\simeq\; 0
+
+</annotation></semantics></math></div></li>
+
+<li>
+<p>the <a class="existingWikiWord" href="/nlab/show/cokernel">cokernel</a> of the <a class="existingWikiWord" href="/nlab/show/Boardman+homomorphism">Boardman homomorphism</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>b</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">b^n</annotation></semantics></math> <a class="maruku-eqref" href="#eq:BoardmandCohomotopyToOrdinaryCohomology">(1)</a> for</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>m</mi><mo>≤</mo><mi>n</mi><mo>≤</mo><mi>d</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">
+  m \leq n  \leq d - 2
+
+</annotation></semantics></math></div>
+<p>is a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">\overline{\rho}_{d-n-1}</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/torsion+subgroup">torsion group</a>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mrow><mi>d</mi><mo>−</mo><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mi>coker</mi><mo stretchy="false">(</mo><msup><mi>b</mi> <mi>n</mi></msup><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mn>0</mn></mrow><annotation encoding="application/x-tex">
+  \overline{\rho}_{d-n-1} coker(b^n) \;\simeq\; 0
+
+</annotation></semantics></math></div></li>
+</ol>
+
+<p>where</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mover><mi>ρ</mi><mo>¯</mo></mover> <mi>i</mi></msub><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mn>1</mn></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>i</mi><mo>≤</mo><mn>1</mn></mtd></mtr> <mtr><mtd><munderover><mo lspace="thinmathspace" rspace="thinmathspace">∏</mo><mrow><mi>j</mi><mo>=</mo><mn>1</mn></mrow><mi>i</mi></munderover><mi>exp</mi><mrow><mo>(</mo><msub><mi>π</mi> <mi>j</mi></msub><mrow><mo>(</mo><mi>𝕊</mi><mo>)</mo></mrow><mo>)</mo></mrow></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mtext>otherwise</mtext></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding="application/x-tex">
+  \overline{\rho}_{i}
+   \;\coloneqq\;
+   \left\{
+   \array{
+     1 &amp;\vert&amp; i\leq 1
+     \\
+     \underoverset{j = 1}{i}{\prod}  
+       exp\left( 
+         \pi_j\left( \mathbb{S}\right)
+       \right)
+     &amp;\vert&amp;
+     \text{otherwise}
+   }
+   \right.
+
+</annotation></semantics></math></div>
+<p>is the <a class="existingWikiWord" href="/nlab/show/multiplication">product</a> of the <a class="existingWikiWord" href="/nlab/show/exponent+of+a+group">exponents</a> of the <a class="existingWikiWord" href="/nlab/show/stable+homotopy+groups+of+spheres">stable homotopy groups of spheres</a> in <a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>≤</mo><mi>i</mi></mrow><annotation encoding="application/x-tex">\leq i</annotation></semantics></math>.</p>
+</div>
+
+<p>(<a href="#Arlettaz04">Arlettaz 04, theorem 1.2</a>)</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -1070,6 +1158,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Jack+Morava">Jack Morava</a>, Rekha Santhanam, <em>Power operations and absolute geometry</em> (<a href="http://www.lemiller.net/media/slidesconf/AbsolutePower.pdf">pdf</a>)</li>
 </ul>
 
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/Boardman+homomorphisms">Boardman homomorphisms</a> from stable cohomotopy is in</p>
+
+<ul>
+<li id="Arlettaz04">Dominique Arlettaz, <em>The generalized Boardman homomorphisms</em>, Central European Journal of Mathematics March 2004, Volume 2, Issue 1, pp 50-56</li>
+</ul>
+
 <p>A lift of <a class="existingWikiWord" href="/nlab/show/Seiberg-Witten+invariants">Seiberg-Witten invariants</a> to classes in <a class="existingWikiWord" href="/nlab/show/circle+group">circle group</a>-<a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a> is discussed in</p>
 
 <ul>
@@ -1087,14 +1181,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 21, 2018 at 08:37:37.
+  Last revised on October 23, 2018 at 09:17:56.
   See the <a href="https://ncatlab.org/nlab/history/stable cohomotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable cohomotopy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
