--- a/pages/19860.html
+++ b/pages/19860.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      theory of G-torsors in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      theory of G-torsors
   </h1>
 
 
@@ -294,6 +294,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9166/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -309,22 +311,6 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
-<p>Which can be restated in terms of representable profunctors as follows. A cwf consists of</p>
-
-<ol>
-<li>a category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math>,</li>
-
-<li>a presheaf <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ty</mi><mo>:</mo><mover><mi>C</mi><mo stretchy="false">^</mo></mover></mrow><annotation encoding="application/x-tex">Ty : \hat C</annotation></semantics></math> of types in context.</li>
-
-<li>a presheaf <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Tm</mi><mo>:</mo><mover><mrow><mo>∫</mo><mi>Ty</mi></mrow><mo>^</mo></mover></mrow><annotation encoding="application/x-tex">Tm : \widehat {\int Ty}</annotation></semantics></math> of typed terms in context.</li>
-
-<li>a functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ext</mi><mo>:</mo><mover><mrow><mo>∫</mo><mi>Ty</mi></mrow><mo>^</mo></mover><mo>→</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">ext : \widehat {\int Ty} \to C</annotation></semantics></math> of context extension that represents the profunctor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mrow><mo>∫</mo><mi>Tm</mi></mrow><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>,</mo><mi>ty</mi><mo>=</mo><mo stretchy="false">)</mo><mo>⊙</mo><mrow><mo>∫</mo><mi>Tm</mi></mrow><mo stretchy="false">(</mo><mi>ctx</mi><mo stretchy="false">(</mo><mi>ty</mi><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>,</mo><mo>=</mo><mo stretchy="false">)</mo><mo>:</mo><mo>∫</mo><mi>Ty</mi><mi>⇸</mi><mi>C</mi></mrow><annotation encoding="application/x-tex">{\int Tm}(-,ty=) \odot {\int Tm}(ctx(ty(-)),=) : \int Ty &amp;#8696; C</annotation></semantics></math> where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ty</mi><mo>:</mo><mo>∫</mo><mi>Tm</mi><mo>→</mo><mo>∫</mo><mi>Ty</mi></mrow><annotation encoding="application/x-tex">ty : \int Tm \to \int Ty</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ctx</mi><mo>:</mo><mo>∫</mo><mi>Ty</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">ctx : \int Ty \to C</annotation></semantics></math> are the projections of the <a class="existingWikiWord" href="/nlab/show/Grothendieck+construction">Grothendieck construction</a>.</li>
-</ol>
-
-<p>Writing the profunctor as P, it is equivalent to the following definition:</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>P</mi><mo stretchy="false">(</mo><mi>Δ</mi><mo>,</mo><mo stretchy="false">(</mo><mi>Γ</mi><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>=</mo><mo stretchy="false">(</mo><mi>γ</mi><mo>:</mo><mi>Δ</mi><mo>→</mo><mi>Γ</mi><mo stretchy="false">)</mo><mo>×</mo><mo stretchy="false">(</mo><mi>a</mi><mo>:</mo><mi>Tm</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo>,</mo><mi>A</mi><mo stretchy="false">[</mo><mi>γ</mi><mo stretchy="false">]</mo><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">P(\Delta, (\Gamma, A)) = (\gamma : \Delta \to \Gamma) \times (a : Tm(\Gamma, A[\gamma]))</annotation></semantics></math></div>
-<p>then the universal property of the context extension is that there is a natural isomorphism <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Δ</mi><mo>→</mo><mi>ext</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mo>≅</mo><mi>P</mi><mo stretchy="false">(</mo><mi>Δ</mi><mo>,</mo><mo stretchy="false">(</mo><mi>Γ</mi><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\Delta \to ext(\Gamma, A) \cong P(\Delta,(\Gamma,A))</annotation></semantics></math></p>
-
 <div class="rightHandSide">
 <div class="toc clickDown" tabindex="0">
 <h3 id="context">Context</h3>
@@ -547,22 +533,22 @@ g_{i}u = g_{j}u &amp;\vdash \bot\quad \text{for all pairs}\;g_i\neq g_j\quad\tex
 
 <div class="revisedby">
   <p>
-  Last revised on October 23, 2018 at 11:37:19.
-  See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October 23, 2018 at 11:56:56.
+  See the <a href="https://ncatlab.org/nlab/history/theory of G-torsors" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1706" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1706 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/theory+of+G-torsors" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/theory of G-torsors/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/theory+of+G-torsors" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/theory+of+G-torsors" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/theory+of+G-torsors" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
