--- a/pages/2191.html
+++ b/pages/2191.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9169/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9169/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -633,7 +633,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>As <a class="existingWikiWord" href="/nlab/show/monoidal+categories">monoidal categories</a> are a <a class="existingWikiWord" href="/nlab/show/vertical+categorification">vertical categorification</a> of <a class="existingWikiWord" href="/nlab/show/monoids">monoids</a>, <em>actegories</em> are a <a class="existingWikiWord" href="/nlab/show/vertical+categorification">vertical categorification</a> of <em>actions</em> of a monoid. So given a monoidal category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>C</mi><mo>,</mo><mo>⊗</mo><mo>,</mo><mi>I</mi><mo>,</mo><mi>l</mi><mo>,</mo><mi>r</mi><mo>,</mo><mi>a</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(C,\otimes,I,l,r,a)</annotation></semantics></math> an actegory is another category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>D</mi></mrow><annotation encoding="application/x-tex">D</annotation></semantics></math> with a notion of “tensor by object of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math>”, i.e., a functor:</p>
+<p>As <a class="existingWikiWord" href="/nlab/show/monoidal+categories">monoidal categories</a> are a <a class="existingWikiWord" href="/nlab/show/vertical+categorification">vertical categorification</a> of <a class="existingWikiWord" href="/nlab/show/monoids">monoids</a>, <em>actegories</em> are a <a class="existingWikiWord" href="/nlab/show/vertical+categorification">vertical categorification</a> of <em><a class="existingWikiWord" href="/nlab/show/actions">actions</a></em> of a monoid. So given a monoidal category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>C</mi><mo>,</mo><mo>⊗</mo><mo>,</mo><mi>I</mi><mo>,</mo><mi>l</mi><mo>,</mo><mi>r</mi><mo>,</mo><mi>a</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(C,\otimes,I,l,r,a)</annotation></semantics></math> an actegory is another category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>D</mi></mrow><annotation encoding="application/x-tex">D</annotation></semantics></math> with a notion of “tensor by object of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math>”, i.e., a functor:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo>⊘</mo><mo>:</mo><mi>C</mi><mo>×</mo><mi>D</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding="application/x-tex">\oslash : C \times D \to D</annotation></semantics></math></div>
 <p>that is associative and unital up to natural isomorphism with respect to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>⊗</mo></mrow><annotation encoding="application/x-tex">\otimes</annotation></semantics></math> in ways that generalize actions of a monoid, and satisfy coherence laws similar to those of a monoidal category.</p>
 
@@ -657,11 +657,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>Bodo Pareigis, <em>Non-additive ring and module theory I. General theory of monoids</em>, Publ. Math. Debrecen 24 (1977), 189–204. MR 56:8656; <em>Non-additive ring and module theory II. C-categories, C-functors, and C-morphisms</em>, Publ. Math. Debrecen 24 (351–361) 1977.</p>
+<p><a class="existingWikiWord" href="/nlab/show/Bodo+Pareigis">Bodo Pareigis</a>, <em>Non-additive ring and module theory I. General theory of monoids</em>, Publ. Math. Debrecen 24 (1977), 189–204. MR 56:8656; <em>Non-additive ring and module theory II. C-categories, C-functors, and C-morphisms</em>, Publ. Math. Debrecen 24 (351–361) 1977.</p>
 </li>
 
 <li>
-<p>M. Kelly, G. Janelidze, <em>A note on actions of a monoidal category</em>, Theory and Applications of Categories, Vol. 9, 2001, No. 4, pp 61–91 <a href="http://www.tac.mta.ca/tac/volumes/9/n4/9-04abs.html">link</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Max+Kelly">Max Kelly</a>, <a class="existingWikiWord" href="/nlab/show/George+Janelidze">George Janelidze</a>, <em>A note on actions of a monoidal category</em>, Theory and Applications of Categories, Vol. 9, 2001, No. 4, pp 61–91 <a href="http://www.tac.mta.ca/tac/volumes/9/n4/9-04abs.html">link</a></p>
 </li>
 
 <li>
@@ -669,7 +669,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Z. Škoda, <em>Distributive laws for actions of monoidal categories</em>, <a href="http://arxiv.org/abs/math/0406310">arxiv:0406310</a>, <em>Equivariant monads and equivariant lifts versus a 2-category of distributive laws</em>, <a href="http://arxiv.org/abs/0707.1609">arxiv:0707.1609</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>, <em>Distributive laws for actions of monoidal categories</em>, <a href="http://arxiv.org/abs/math/0406310">arxiv:0406310</a>, <em>Equivariant monads and equivariant lifts versus a 2-category of distributive laws</em>, <a href="http://arxiv.org/abs/0707.1609">arxiv:0707.1609</a></p>
 </li>
 </ul>
 </body></html>
@@ -678,14 +678,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 24, 2018 at 09:44:19.
+  Last revised on October 24, 2018 at 12:40:56.
   See the <a href="https://ncatlab.org/nlab/history/actegory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/actegory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/actegory/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/actegory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/actegory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/actegory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/actegory/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/actegory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/actegory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/actegory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
