--- a/pages/9807.html
+++ b/pages/9807.html
@@ -1164,6 +1164,12 @@ margin-left: 0em;
 <li id="Kalkman93">Jaap Kalkman, <em>BRST model applied to symplectic geometry</em>, Ph.D. Thesis, Utrecht, 1993 (<a href="http://cds.cern.ch/record/568522/files/9308132.pdf">arXiv:hep-th/9308132</a> (original ArXiv pdf broken)), published versions at (<a href="http://projecteuclid.org/euclid.cmp/1104252784">projectEuclid</a>)</li>
 </ul>
 
+<p>Discussion in the broader context of <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant</a> <a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential cohomology</a> is in</p>
+
+<ul>
+<li>Andreas Kübel, <a class="existingWikiWord" href="/nlab/show/Andreas+Thom">Andreas Thom</a>, <em>Equivariant Differential Cohomology</em>, Transactions of the American Mathematical Society (2018) (<a href="https://arxiv.org/abs/1510.06392">arXiv:1510.06392</a>)</li>
+</ul>
+
 <p>Discussion in the context of the <a class="existingWikiWord" href="/nlab/show/gauged+WZW+model">gauged WZW model</a> includes</p>
 
 <ul>
@@ -1185,14 +1191,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 24, 2018 at 07:22:25.
+  Last revised on October 24, 2018 at 12:30:31.
   See the <a href="https://ncatlab.org/nlab/history/equivariant de Rham cohomology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+de+Rham+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+de+Rham+cohomology/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/equivariant+de+Rham+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+de+Rham+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+de+Rham+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+de+Rham+cohomology/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/equivariant+de+Rham+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+de+Rham+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant de Rham cohomology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
