--- a/pages/11518.html
+++ b/pages/11518.html
@@ -515,6 +515,7 @@ margin-left: 0em;
 <li><a href='#properties'>Properties</a></li>
 <ul>
 <li><a href='#relation_to_spectra_with_action'>Relation to spectra with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-action</a></li>
+<li><a href='#relation_to_borelequivariant_spectra'>Relation to Borel-equivariant spectra</a></li>
 <li><a href='#EquivariantWhitehead'>Equivariant stable Whitehead theorem</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
@@ -613,6 +614,12 @@ margin-left: 0em;
 
 <p>(e.g. <a href="#Carlsson92">Carlsson 92, p. 14</a>, <a href="#GreenleesMay">GreenleesMay, p.16</a>)</p>
 
+<h3 id="relation_to_borelequivariant_spectra">Relation to Borel-equivariant spectra</h3>
+
+<p>In the general context of (<a class="existingWikiWord" href="/nlab/show/global+equivariant+stable+homotopy+theory">global</a>) <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a>, <a class="existingWikiWord" href="/nlab/show/Borel+equivariant+cohomology">Borel-equivariant</a> spectra are those which are <em>right induced</em> from plain <a class="existingWikiWord" href="/nlab/show/spectra">spectra</a>, hence which are in the <a class="existingWikiWord" href="/nlab/show/essential+image">essential image</a> of the <a class="existingWikiWord" href="/nlab/show/right+adjoint">right adjoint</a> to the <a class="existingWikiWord" href="/nlab/show/forgetful+functor">forgetful functor</a> from <a class="existingWikiWord" href="/nlab/show/equivariant+spectra">equivariant spectra</a> to plain <a class="existingWikiWord" href="/nlab/show/spectra">spectra</a>.</p>
+
+<p>(<a href="#Schwede18">Schwede 18, Example 4.5.19</a>)</p>
+
 <h3 id="EquivariantWhitehead">Equivariant stable Whitehead theorem</h3>
 
 <p>The equivariant version of the stable <a class="existingWikiWord" href="/nlab/show/Whitehead+theorem">Whitehead theorem</a> holds:</p>
@@ -703,6 +710,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>See also</p>
+
+<ul>
+<li id="Schwede18"><a class="existingWikiWord" href="/nlab/show/Stefan+Schwede">Stefan Schwede</a>, <em><a class="existingWikiWord" href="/nlab/show/Global+homotopy+theory">Global homotopy theory</a></em> 2018 (<a href="https://arxiv.org/abs/1802.09382">arXiv:1802.09382</a>)</li>
+</ul>
+
 <p>Relation to <a class="existingWikiWord" href="/nlab/show/Mackey+functors">Mackey functors</a>:</p>
 
 <ul>
@@ -746,14 +759,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 22, 2018 at 01:11:58.
+  Last revised on October 24, 2018 at 14:31:41.
   See the <a href="https://ncatlab.org/nlab/history/G-spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/G-spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/G-spectrum/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/G-spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/G-spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/G-spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/G-spectrum/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/G-spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/G-spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/G-spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
