--- a/pages/1884.html
+++ b/pages/1884.html
@@ -1249,7 +1249,7 @@ margin-left: 0em;
 <p>is a <a class="existingWikiWord" href="/nlab/show/trivial+vector+bundle">trivial vector bundle</a>.</p>
 </div>
 
-<p>For <strong>proof</strong> see <a href="TopologicalVectorbundleOverCompactHausdorffSpaceIsDirectSummandOfTrivialBundle">this prop.</a> at <em><a class="existingWikiWord" href="/nlab/show/topological+vector+bundle">topological vector bundle</a></em>.</p>
+<p>For <strong>proof</strong> see <a href="topological+vector+bundle#TopologicalVectorbundleOverCompactHausdorffSpaceIsDirectSummandOfTrivialBundle">this prop.</a> at <em><a class="existingWikiWord" href="/nlab/show/topological+vector+bundle">topological vector bundle</a></em>.</p>
 
 <h3 id="the_kgroup">The K-group</h3>
 
@@ -3579,14 +3579,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 24, 2018 at 10:17:44.
+  Last revised on October 25, 2018 at 05:21:22.
   See the <a href="https://ncatlab.org/nlab/history/topological K-theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/topological+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/topological+K-theory/93" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(93 revisions)</span> | <a href="/nlab/show/diff/topological+K-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/topological+K-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/topological+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/topological+K-theory/94" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(94 revisions)</span> | <a href="/nlab/show/diff/topological+K-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/topological+K-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/topological K-theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
