--- a/pages/17150.html
+++ b/pages/17150.html
@@ -531,7 +531,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Charles+Rezk">Charles Rezk</a>, <em><a class="existingWikiWord" href="/nlab/show/Global+Homotopy+Theory+and+Cohesion">Global Homotopy Theory and Cohesion</a></em> (on global homotpy theory being a <a class="existingWikiWord" href="/nlab/show/cohesive+%28infinity%2C1%29-topos">cohesive (infinity,1)-topos</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Charles+Rezk">Charles Rezk</a>, <em><a class="existingWikiWord" href="/nlab/show/Global+Homotopy+Theory+and+Cohesion">Global Homotopy Theory and Cohesion</a></em> (on global homotopy theory being a <a class="existingWikiWord" href="/nlab/show/cohesive+%28infinity%2C1%29-topos">cohesive (infinity,1)-topos</a>)</p>
 </li>
 
 <li>
@@ -550,14 +550,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 25, 2018 at 05:27:15.
+  Last revised on October 25, 2018 at 09:18:59.
   See the <a href="https://ncatlab.org/nlab/history/Global homotopy theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Global+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Global+homotopy+theory/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Global+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Global+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Global+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Global+homotopy+theory/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Global+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Global+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Global homotopy theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
