--- a/pages/6713.html
+++ b/pages/6713.html
@@ -1247,6 +1247,24 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>Discussion of the alleged K-theory classification of Dbrane charge in relation to the <a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a> <a class="existingWikiWord" href="/nlab/show/supergravity+C-field">supergravity C-field</a> is in</p>
+
+<ul>
+<li id="FMW00">D. Diaconescu, <a class="existingWikiWord" href="/nlab/show/Gregory+Moore">Gregory Moore</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">E_8</annotation></semantics></math> Gauge Theory, and a Derivation of K-Theory from M-Theory</em>, Adv.Theor.Math.Phys.6:1031-1134,2003 (<a href="http://arxiv.org/abs/hep-th/0005090">arXiv:hep-th/0005090</a>), summarised in <em>A Derivation of K-Theory from M-Theory</em> (<a href="http://arxiv.org/abs/hep-th/0005091">arXiv:hep-th/0005091</a>)</li>
+</ul>
+
+<p>For more on this perspective as 10d type II as a <a class="existingWikiWord" href="/nlab/show/self-dual+higher+gauge+theory">self-dual higher gauge theory</a> in the boudnary of a kind of <a class="existingWikiWord" href="/nlab/show/higher+dimensional+Chern-Simons+theory">11-d Chern-Simons theory</a> is in</p>
+
+<ul>
+<li id="BelovMooreII">Dmitriy Belov, <a class="existingWikiWord" href="/nlab/show/Greg+Moore">Greg Moore</a>, <em>Type II Actions from 11-Dimensional Chern-Simons Theories</em> (<a href="http://arxiv.org/abs/hep-th/0611020">arXiv:hep-th/0611020</a>)</li>
+</ul>
+
+<p>More complete discussion of the decomposition of the <a class="existingWikiWord" href="/nlab/show/supergravity+C-field">supergravity C-field</a> as one passes from 11d to 10d is in</p>
+
+<ul>
+<li id="MathaiSati03"><a class="existingWikiWord" href="/nlab/show/Varghese+Mathai">Varghese Mathai</a>, <a class="existingWikiWord" href="/nlab/show/Hisham+Sati">Hisham Sati</a>, <em>Some Relations between Twisted K-theory and E8 Gauge Theory</em>, JHEP0403:016,2004 (<a href="http://arxiv.org/abs/hep-th/0312033">arXiv:hep-th/0312033</a>)</li>
+</ul>
+
 <h3 id="via_the_atiyahhirzebruch_spectral_sequence_2">Via the Atiyah-Hirzebruch spectral sequence</h3>
 
 <p>Expression of these D-brane K-theory classes via the <a class="existingWikiWord" href="/nlab/show/Atiyah-Hirzebruch+spectral+sequence">Atiyah-Hirzebruch spectral sequence</a> is discussed in</p>
@@ -1324,14 +1342,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 22, 2018 at 06:25:06.
+  Last revised on October 25, 2018 at 11:17:45.
   See the <a href="https://ncatlab.org/nlab/history/D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/66" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(66 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/67" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(67 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
