--- a/pages/17500.html
+++ b/pages/17500.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9173/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -312,13 +312,19 @@ margin-left: 0em;
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Writings</title></head>
 <body>
 <ul>
-<li><a href="https://mathgroove.wordpress.com/info/">Webpage</a></li>
+<li>
+<p><a href="https://web.ma.utexas.edu/people/graduate_students/_grad1/?uid=1148">Institute page</a></p>
+</li>
+
+<li>
+<p><a href="https://mathgroove.wordpress.com/info/">old personal webpage</a></p>
+</li>
 </ul>
 
 <h2 id="writings">Writings</h2>
 
 <ul>
-<li><em>Complex oriented cohomology, generalized orientation and Thom isomorphism</em>, 2016, 2018 (<a class="existingWikiWord" href="/nlab/files/PedrotticECohomology2018.pdf" title="pdf">pdf</a>)</li>
+<li id="ComplexCobordismNotes"><em>Complex oriented cohomology, generalized orientation and Thom isomorphism</em>, 2016, 2018 (<a class="existingWikiWord" href="/nlab/files/PedrotticECohomology2018.pdf" title="pdf">pdf</a>)</li>
 </ul>
 
 <p>on <a class="existingWikiWord" href="/nlab/show/complex+oriented+cohomology">complex oriented cohomology</a>, <a class="existingWikiWord" href="/nlab/show/Conner-Floyd-Chern+classes">Conner-Floyd-Chern classes</a> and the <a class="existingWikiWord" href="/nlab/show/Thom+isomorphism">Thom isomorphism</a> in generalized cohomology.</p>
@@ -328,7 +334,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 04:52:06.
+  Last revised on October 26, 2018 at 05:03:28.
   See the <a href="https://ncatlab.org/nlab/history/Riccardo Pedrotti" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
