--- a/pages/19863.html
+++ b/pages/19863.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      David Morrison in nLab
+      Miranda Cheng in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      David Morrison
+      Miranda Cheng
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9176/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,87 +309,21 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
 <body>
 <ul>
-<li><a href="http://www.math.ucsb.edu/~drm/">webpage</a></li>
-</ul>
-
-<h2 id="lectures">Lectures</h2>
-
-<ul>
-<li>On <a class="existingWikiWord" href="/nlab/show/K3">K3</a>-singularities in <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> (<a href="https://sites.duke.edu/scshgap/dave-morrison-lectures/#09sep18">here</a>)</li>
+<li><a href="https://en.wikipedia.org/wiki/Miranda_Cheng">Wikipedia entry</a></li>
 </ul>
 
 <h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/K3+surface">K3 surface</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Moonshine">Moonshine</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/conifold+transition">conifold transition</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/discrete+torsion">discrete torsion</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/moduli+space+of+Calabi-Yau+spaces">moduli space of Calabi-Yau spaces</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/F%2FM-theory+on+elliptically+fibered+Calabi-Yau+3-folds">F/M-theory on elliptically fibered Calabi-Yau 3-folds</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/geometric+engineering+of+quantum+field+theory">geometric engineering of quantum field theory</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/duality+between+F-theory+and+heterotic+string+theory">duality between F-theory and heterotic string theory</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/superdeterminant">superdeterminant</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/chiral+algebra">chiral algebra</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE classification</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/associative+submanifold">associative submanifold</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/mirror+symmetry">mirror symmetry</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/supergeometry">supergeometry</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/little+string+theory">little string theory</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/spin+geometry">spin geometry</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional D-brane</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/6d+%282%2C0%29-superconformal+QFT">6d (2,0)-superconformal QFT</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> on <a class="existingWikiWord" href="/nlab/show/K3-surfaces">K3-surfaces</a></p>
 </li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
@@ -398,22 +332,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 06:09:34.
-  See the <a href="https://ncatlab.org/nlab/history/David Morrison" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October 26, 2018 at 06:14:58.
+  See the <a href="https://ncatlab.org/nlab/history/Miranda Cheng" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Morrison" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Morrison/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/David+Morrison" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Morrison" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/David Morrison/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Miranda+Cheng" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Miranda Cheng/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/David+Morrison" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Miranda+Cheng" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/David+Morrison" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Miranda+Cheng" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/David+Morrison" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Miranda+Cheng" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
