--- a/pages/4065.html
+++ b/pages/4065.html
@@ -458,20 +458,26 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Shamit+Kachru">Shamit Kachru</a>, Arnav Tripathy, <em>The hidden symmetry of the heterotic string</em> (<a href="https://arxiv.org/abs/1702.02572">arXiv:1702.02572</a>)</p>
 </li>
 </ul>
+
+<p>Specifically in relation to <a class="existingWikiWord" href="/nlab/show/KK-compactifications">KK-compactifications</a> of <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> on <a class="existingWikiWord" href="/nlab/show/K3-surfaces">K3-surfaces</a>:</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Miranda+Cheng">Miranda Cheng</a>, Sarah M. Harrison, Roberto Volpato, Max Zimet, <em>K3 String Theory, Lattices and Moonshine</em> (<a href="https://arxiv.org/abs/1612.04404">arXiv:1612.04404</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October  6, 2018 at 02:53:49.
+  Last revised on October 26, 2018 at 06:13:19.
   See the <a href="https://ncatlab.org/nlab/history/Moonshine" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Moonshine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Moonshine/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/Moonshine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Moonshine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Moonshine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Moonshine/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/Moonshine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Moonshine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Moonshine/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
